# libbswabe

./: .gitignore  Makefile.am  Makefile.in  README  configure.ac  core.c  misc.c
win/libbswabe/: libbswabe.sln  libbswabe.vcxproj  libbswabe.vcxproj.filters
